--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dev = [
     "coverage>=7.6.10",
     "ipython>=8.31.0",
     "mypy>=1.14.0",
+    "ruff>=0.8.4",
     "types-requests>=2.32.0.20241016",
 ]
 downloader = [
